creacion de shop.html

--- a/index.html
+++ b/index.html
@@ -3,29 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Challenge Integrador</title>
+    <title>Challenge Integrador Home</title>
+
   </head>
 
   <body>
     <!-- INICIO HEADER -->
     <header>
       <nav>
+
         <picture>
-          <a href="./index.html">
+          <a class="navbar-brand" href="index.html">
             <img
-              src="./img/branding/logo_light_horizontal.svg"
-              alt="Isologotipo de la Marca FunkoShop"
-            />
+              src="img/branding/logo_light_horizontal.svg"
+              alt="Isologotipo de la Marca FunkoShop" />
+            <h1>
+              FUNKOSHOP
+            </h1>
           </a>
         </picture>
         <ul>
-          <li><a href="./pages/shop.html">SHOP</a></li>
-          <li><a href="./pages/cantacto.html">CONTACTO</a></li>
-          <li><a href="./pages/login.hmtl">LOGIN</a></li>
+          <li><a href="pages/shop.html">SHOP</a></li>
+          <li><a href="pages/cantacto.html">CONTACTO</a></li>
+          <li><a href="pages/login.hmtl">LOGIN</a></li>
           <li>
-            <a href="./pages/carrito.html"
-              ><img src="./img/icons/cart-icon.svg" alt=""
-            /></a>
+            <a href="pages/carrito.html"><img src="img/icons/cart-icon.svg"
+                alt /></a>
           </li>
         </ul>
       </nav>
@@ -37,7 +40,7 @@
         <article>
           <h3>Nuevos Ingresos</h3>
           <p>Descubrí el próximo Funko Pop de tu colección</p>
-          <a href="./pages/shop.html">SHOP</a>
+          <a href="pages/shop.html">SHOP</a>
         </article>
       </section>
       <section>
@@ -48,13 +51,12 @@
               Disfruta de una saga que sigue agregando personajes a su
               colección.
             </p>
-            <a href="./pages/shop.html">VER COLECCIÓN</a>
+            <a href="pages/shop.html">VER COLECCIÓN</a>
           </article>
           <picture>
             <img
-              src="./img/star-wars/baby-yoda-1.webp"
-              alt="Figura Coleccionable Funko de Grogu de la serie Mandalorian"
-            />
+              src="img/star-wars/baby-yoda-1.webp"
+              alt="Figura Coleccionable Funko de Grogu de la serie Mandalorian" />
           </picture>
         </div>
         <div>
@@ -64,26 +66,24 @@
               Atrapa todos los que puedas y disfruta de una colección llena de
               amigos.
             </p>
-            <a href="./pages/shop.html">VER COLECCIÓN</a>
+            <a href="pages/shop.html">VER COLECCIÓN</a>
           </article>
           <picture>
             <img
-              src="./img/pokemon/vulpix-1.webp"
-              alt="Figura Coleccionable Funko de Vulpix de la Serie Pokemon"
-            />
+              src="img/pokemon/vulpix-1.webp"
+              alt="Figura Coleccionable Funko de Vulpix de la Serie Pokemon" />
           </picture>
         </div>
         <div>
           <article>
             <h3>HARRY POTTER</h3>
             <p>Revive los recuerdos de una saga llena de magia y encanto.</p>
-            <a href="./pages/shop.html">VER COLECCIÓN</a>
+            <a href="pages/shop.html">VER COLECCIÓN</a>
           </article>
           <picture>
             <img
-              src="./img/harry-potter/snape-patronus-1.webp"
-              alt="Figura Coleccionable Funko del Patronus de Snape de la Pelicula Harry Potter"
-            />
+              src="img/harry-potter/snape-patronus-1.webp"
+              alt="Figura Coleccionable Funko del Patronus de Snape de la Pelicula Harry Potter" />
           </picture>
         </div>
       </section>
@@ -92,12 +92,11 @@
         <ul>
           <li>
             <article>
-              <a href="">
+              <a href>
                 <picture>
                   <img
                     src="img/star-wars/trooper-1.webp"
-                    alt="Figura Coleccionable Funko de un Stormtrooper de Star Wars"
-                  />
+                    alt="Figura Coleccionable Funko de un Stormtrooper de Star Wars" />
                 </picture>
                 <div>
                   <p>STAR WARS</p>
@@ -110,12 +109,11 @@
           </li>
           <li>
             <article>
-              <a href="">
+              <a href>
                 <picture>
                   <img
                     src="img/pokemon/pidgeotto-1.webp"
-                    alt="Figura Coleccionable Funko de un Pidgeotto de Pokemon"
-                  />
+                    alt="Figura Coleccionable Funko de un Pidgeotto de Pokemon" />
                 </picture>
                 <div>
                   <p>POKEMON</p>
@@ -123,47 +121,48 @@
                   <p>$ 1799,99.-</p>
                   <p>3 CUOTAS SIN INTERÉS</p>
                 </div>
-            </article>
-          </li>
-          <li>
-            <article>
-              <a href="">
-                <picture>
-                  <img
-                    src="img/harry-potter/luna-1.webp"
-                    alt="Figura Coleccionable Funko de LUNA LOVEGOOD LION MASK de Harry Potter"
-                  />
-                </picture>
-                <div>
-                  <p>HARRY POTTER</p>
-                  <h4>LUNA LOVEGOOD LION MASK</h4>
-                  <p>$ 1799,99.-</p>
-                  <p>3 CUOTAS SIN INTERÉS</p>
-                </div>
-            </article>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <!-- FIN SECCION PRINCIPAL -->
+              </article>
+            </li>
+            <li>
+              <article>
+                <a href>
+                  <picture>
+                    <img
+                      src="img/harry-potter/luna-1.webp"
+                      alt="Figura Coleccionable Funko de LUNA LOVEGOOD LION MASK de Harry Potter" />
+                  </picture>
+                  <div>
+                    <p>HARRY POTTER</p>
+                    <h4>LUNA LOVEGOOD LION MASK</h4>
+                    <p>$ 1799,99.-</p>
+                    <p>3 CUOTAS SIN INTERÉS</p>
+                  </div>
+                </article>
+              </li>
+            </ul>
+          </section>
+        </main>
+        <!-- FIN SECCION PRINCIPAL -->
 
-    <!-- INICIO FOOTER -->
-    <footer>
-      <section>
-        <nav>
-          <ul>
-            <li><a href="./pages/shop.html">SHOP</a></li>
-            <li><a href="./pages/login.html">INGRESAR</a></li>
-            <li><a href="./pages/contacto.html">CONTACTO</a></li>
-            
-          </ul>
-          <picture>
-            <img src="./img/branding/isotype.svg" alt="Isologotipo de la Marca Funko">
-          </picture>
-        </nav>
-      </section>
-      <p>All rights reserved 2023 - Funkoshop &copy;</p>
-    </footer>
-    <!-- FIN FOOTER -->
-  </body>
-</html>
+        <!-- INICIO FOOTER -->
+        <footer>
+          <section>
+            <nav>
+              <ul>
+                <li><a href="pages/shop.html">SHOP</a></li>
+                <li><a href="pages/login.html">INGRESAR</a></li>
+                <li><a href="pages/contacto.html">CONTACTO</a></li>
+
+              </ul>
+              <picture>
+                <img src="img/branding/isotype.svg"
+                  alt="Isologotipo de la Marca Funko">
+              </picture>
+            </nav>
+          </section>
+          <p>All rights reserved 2023 - Funkoshop &copy;</p>
+        </footer>
+        <!-- FIN FOOTER -->
+
+      </body>
+    </html>
